...
    }
    
    func proceedToNextQuestionOrResults() {
        if self.isLastQuestion(){
            statisticService.store(correct: correctAnswers, total: questionsAmount)
            viewController?.show(quiz:  QuizResultsViewModel(
                title: "Этот раунд окончен!",
                text: "Ваш результат: \(correctAnswers)/\(questionsAmount)",
                buttonText: "Сыграть еще раз"))
        } else {
            self.switchToNextQuestion()
            self.questionFactory?.requestNextQuestion()
        }
...
